@@ -1,4 +1,8 @@
 
+2018-09-30  Simon Sobisch <simonsobisch@gnu.org>
+
+	* fileio.c [HAVE_FCNTL]: minor code cleanup
+
 2018-09-22  Simon Sobisch <simonsobisch@gnu.org>
 
 	* fileio.c [WITH_DB]: fix split key access by using the component data
